--- a/src/components/AddTask/addTask.module.css
+++ b/src/components/AddTask/addTask.module.css
@@ -1,3 +1,17 @@
-.addTask {
-  /* Sample */
+.todoForm {
+  width:400px;
+  margin: auto;
+  border: 1px solid red;
+}
+.input_field{
+  padding:10px 150px 10px 30px;
+}
+.add_button{
+  color:blue;
+  background-color: white;
+  border: none;
+  margin-left: 15px;
+  margin-top:10px;
+  font-size: 30px;
+  font-weight: bold;
 }
